kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-service
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: book-service
  template:
    metadata:
      labels:
        app: book-service
    spec:
      containers:
        - name: book-service
          image: gcr.io/jfang-test/book-service
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: book-service
  labels:
    app: book-service
spec:
  type: ClusterIP
  clusterIP: "None"
  selector:
    app: book-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: book-web
  template:
    metadata:
      labels:
        app: book-web       
    spec:
      containers:
        - name: book-web
          image: gcr.io/jfang-test/book-web
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: book-web
spec:
  selector:
    app: book-web
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: book-web-ingress
spec:
  defaultBackend:
    service:
      name: book-web
      port:
        number: 8080
